Modify Modal for adding find friends criteria

--- a/client/src/Home/less/followUserModal.less
+++ b/client/src/Home/less/followUserModal.less
@@ -5,9 +5,29 @@
   background-color: #fafafa;
   min-height: 200px;
   text-align: center;
-  padding-top: 80px;
+  padding: 20px 0 20px 0;
 }
 
 .steps-action {
   margin-top: 24px;
+}
+
+.ant-steps-horizontal .ant-steps-description{
+  max-width: 220px;
+}
+
+.custom-image img {
+  display: block;
+}
+.custom-card {
+  float: left;
+  padding: 10px 0px;
+}
+.custom-card p {
+  color: #999;
+}
+
+.custom-number-input {
+  float: right;
+  padding: 8px 3px 8px 0;
 }
