--- a/client/src/Home/less/followUserModal.less
+++ b/client/src/Home/less/followUserModal.less
@@ -3,7 +3,7 @@
   border: 1px dashed #e9e9e9;
   border-radius: 6px;
   background-color: #fafafa;
-  min-height: 200px;
+  min-height: 422px;
   text-align: center;
   padding: 20px 0 20px 0;
 }
@@ -30,4 +30,50 @@
 .custom-number-input {
   float: right;
   padding: 8px 3px 8px 0;
+}
+
+
+
+
+.double-bounce {
+  width: 37px;
+  height: 37px;
+  margin: 3px auto;
+  position: relative;
+}
+
+.double-bounce1, .double-bounce2 {
+  //width: 100%;
+  //height: 100%;
+  //border-radius: 50%;
+  background-color: #03A9F4;
+  //opacity: 0.6;
+  //position: absolute;
+  //top: 0;
+  //left: 0;
+  //
+  //-webkit-animation: bounce 2.0s infinite ease-in-out;
+  //animation: bounce 2.0s infinite ease-in-out;
+}
+
+
+
+.vertical-center-modal {
+  text-align: center;
+  white-space: nowrap;
+}
+
+.vertical-center-modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  width: 0;
+}
+
+.vertical-center-modal .ant-modal {
+  display: inline-block;
+  vertical-align: middle;
+  top: 0;
+  text-align: left;
 }
