Change User dropdown UI

--- a/client/src/Home/less/nav.less
+++ b/client/src/Home/less/nav.less
@@ -94,3 +94,27 @@
     }
   }
 }
+
+.custom-caret-down {
+  margin-left: 5px;
+  font-size: 8px;
+}
+
+.username span{
+  font-size: 14px;
+  font-weight: 600;
+  display: block;
+  width: 185px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.user-info{
+  color: #757575;
+  padding: 2px 0;
+}
+
+.user-menu-item{
+  padding: 10px 16px;
+}
