Add round corner to profile logos

--- a/client/src/Home/less/nav.less
+++ b/client/src/Home/less/nav.less
@@ -75,6 +75,7 @@
       & .img {
         margin-left: 0;
         & img {
+          border-radius: 3px;
           vertical-align: middle;
         }
       }
