Adding error page

--- a/client/src/Home/less/followUserModal.less
+++ b/client/src/Home/less/followUserModal.less
@@ -111,3 +111,14 @@
   border-radius: 3px;
 }
 
+.not-found-row2{
+  margin-top: 60px;
+}
+
+.not-found-row2 .or{
+  margin: 20px 0;
+}
+
+.not-found-row2 .first-row{
+  margin-bottom: 20px;
+}
