Implemented update config

--- a/client/src/Components/less/followerConfig.less
+++ b/client/src/Components/less/followerConfig.less
@@ -7,3 +7,12 @@
 .editable-row-operations a {
   margin-right: 8px;
 }
+
+.follow-btn{
+  margin: 30px auto;
+}
+
+.follow-btn button{
+  display: block;
+  margin: 0 auto;
+}
