Implementing App UI part 3

--- a/client/src/Components/less/antMotion_style.less
+++ b/client/src/Components/less/antMotion_style.less
@@ -13,4 +13,5 @@
 
 @import './followUserModal.less';
 @import './app.less';
-@import './followerConfig.less';
+@import './followerConfigPage.less';
+@import './friendsListPage.less';
