--- a/client/src/Components/less/followUserModal.less
+++ b/client/src/Components/less/followUserModal.less
@@ -98,8 +98,8 @@
 
 .h1-question-mark{
   font-size: 14px;
-  color: @line-deep-color;
-  cursor: pointer;
+  //color: @line-deep-color;
+  //cursor: pointer;
 }
 
 .new-friends-container{
