Update UI for friendsList page

--- a/client/src/Components/less/friendsListPage.less
+++ b/client/src/Components/less/friendsListPage.less
@@ -3,7 +3,36 @@
 .refresh-btn{
   float: right;
   position: relative;
-  top: -60px;
+
 };
 
+.friend-list-container{
+  padding: 20px;
+  border: 1px dashed #e9e9e9;
+  background-color: #FAFAFA;
+  border-radius: 4px;
+}
 
+.friend-col{
+  margin-bottom:16px;
+}
+
+.friend-list-card{
+  padding: 10px;
+}
+
+.friend-name{
+  text-align: left;
+  font-size: 14px;
+}
+.friend-name a{
+  color: @title-color;
+}
+
+.details {
+  display: block;
+  width: 170px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
