Adding pagination for friendsList page.

--- a/client/src/Components/less/friendsListPage.less
+++ b/client/src/Components/less/friendsListPage.less
@@ -14,7 +14,7 @@
 }
 
 .friend-col{
-  margin-bottom:16px;
+  margin: 12px 0;
 }
 
 .friend-list-card{
@@ -35,4 +35,17 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+.friend-pagination {
+  margin: 30px auto;
+}
+
+.friend-pagination li {
+  list-style: none !important;
+}
+
+.friendsCount p{
+  padding: 0;
+  margin: 0;
 }
