Use local images rather than remote ones

--- a/client/src/Components/less/content0.less
+++ b/client/src/Components/less/content0.less
@@ -7,7 +7,7 @@
   height: 100vh;
   position: relative;
   text-align: center;
-  background-image: url("https://zos.alipayobjects.com/rmsportal/gGlUMYGEIvjDOOw.jpg");
+  background-image: url("/images/gGlUMYGEIvjDOOw.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
